Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-127687

qmlls does not print warning categories on warnings

    XMLWordPrintable

Details

    • 72b70678b (dev), da228f0f9 (6.8), 6f7887b8a (6.7)

    Description

      Qmlls does not print out warning categories, for example:

      while qmllint does:

      qmlls should print out the warnings in the same fashion as qmllint. Its hard to customize and disable warnings when you don't know the warning category, for example.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              sami.shalayel Sami Shalayel
              sami.shalayel Sami Shalayel
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes