qmlls: add warning categories to linting messages

Make qmlls print out its linting message in the same way as qmllint, by
appending the warning category name in brackets.

Fixes: QTBUG-127687
Change-Id: Ib3f001a4a0f0a591e09b158045c6a35a8d919ccf
Reviewed-by: Semih Yavuz <semih.yavuz@qt.io>
(cherry picked from commit 72b70678b480fa1a494fd1632eab1cf9ab262597)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit da228f0f98f4aac9b0c192c9b40fe02b156aaf85)